--- a/ToyProject/src/main/webapp/WEB-INF/web.xml
+++ b/ToyProject/src/main/webapp/WEB-INF/web.xml
@@ -17,10 +17,14 @@
 	<!-- Processes application requests -->
 	
 	<servlet>
-    	<description></description>
     	<display-name>DispatcherServlet</display-name>
     	<servlet-name>DispatcherServlet</servlet-name>
     	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+  		<init-param>
+         	<param-name>contextConfigLocation</param-name>
+         	<param-value>classpath:/**/DispatcherServlet-servlet.xml</param-value>
+     	</init-param>
+     	<load-on-startup>1</load-on-startup>
   	</servlet>
 		
 	<servlet-mapping>
